# PyGrepTool

./: .gitignore  .pygrepignore  .pygreptool.example.json  AGENTS.md  Dockerfile  LICENSE  README.ko.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: agent-search-tool-blog.md  agent-search-vs-vector-deck.md  agent-tool-evaluation.md  navigation-evaluation.md  open-source-references.md  python-search-dependency-recommendations.md  search-backend-benchmark.md
examples/: agent_access_contract_demo.py  agent_access_live_demo.py  compose_your_own_agent.py  langchain_agent_search.py  quick_file_navigation.py  sandboxed_navigation.py  tool_runtime_example.py
examples/sample_project/: app.py  notes.md
scripts/: benchmark_search_backends.py  demo_search.py  demo_tool_call.py  evaluate_navigation.py
skills/pygreptool-navigation/: SKILL.md
skills/pygreptool-navigation/agents/: openai.yaml
skills/pygreptool-navigation/scripts/: invoke_pygreptool.py  lightweight_runtime.py
src/pygreptool/: __init__.py  __main__.py  agent_contract.py  cli.py  core.py  error_safety.py  file_discovery.py  file_tool.py  langchain_agent.py  langchain_tool.py  langchain_toolkit.py  path_policy.py  runtime_scope.py  security_policy.py  tool.py  tool_cli.py
src/pygreptool/backends/: __init__.py  grep.py  python.py  rg.py
standalone/: pygrep_tool.py
tests/: test_agent_access_contract.py  test_agent_contract.py  test_agent_fixture_tool.py  test_cli.py  test_core.py  test_example_trace.py  test_find_files.py  test_grep_backend.py  test_langchain_agent.py  test_langchain_tool.py  test_langchain_toolkit.py  test_live_agent_search.py  test_navigation_golden_set.py  test_python_backend.py  test_rg_backend.py  test_skill_runner.py  test_standalone.py  test_tool.py  test_tool_hardening.py
tests/fixtures/: navigation_golden_set.json
tests/fixtures/agent_sample_project/: .pygreptool.json
tests/fixtures/agent_sample_project/docs/: operations.md
tests/fixtures/agent_sample_project/private/: credential.py
tests/fixtures/agent_sample_project/src/: alpha_service.py  beta_service.py
tools/: read_context.openai.chat_completions.tool.json  read_context.openai.responses.tool.json  sample_tool_call_arguments.json  search_code.openai.chat_completions.tool.json  search_code.openai.responses.tool.json
